test/positive/FinalClass.java
public abstract class FinalClass {
    public FinalClass() {}
}
