test/negative/AbstractStaticMethod.java
public class AbstractStaticMethod {
    abstract static void f() {
    }
}
